src/assets/css/style.css
/* ... */
@media (min-width: 768px) {
	.wrapper {
		max-width: 75%;
	}
} 

.nissan-logo {
	padding-top: 55px;
}
.thanks-page .nissan-logo {
	padding-top: 5px;
}

.nissan-logo img {
	width: 240px;
}

.regal-nissan-logo img {
	width: 80px;
}

.login-header {
	font-size: 16px;
	padding-top: 1em;
	padding-bottom: 2em;
}
.thanks-page .login-header {
	padding-bottom: 5px;
	padding-top: 5px
}

.access-form {
	text-align: center;
	width: 75%;
	margin: auto;
	padding-bottom: 20px;
}

.label {
	display: block;
	font-size: 10px;
	font-weight: bold;
	padding: 0 20px;
	padding-bottom: 0.5em;
}

.access-code {
	font-size: 24px;
	border: 1px solid #000;
	width: 100%;
	box-sizing: border-box;
	text-align: center;
	padding: 5px 10px;
	border-radius: 6px;
}

.enter-btn {
	font-size: 24px;
	text-transform: uppercase;
	color: #fff;
	background-color: #c3002f;
	padding: 8px 0;
	margin-top: 32px;
	cursor: pointer;
	width: 100%;
	cursor: pointer;
}

.enter-btn:hover {
	background-color: #aa0000;
}

.modal {
	position: fixed;
	text-align: center;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	padding: 20px;
	box-sizing: border-box;
	background-color: rgba(255,255,255,0.5);
	z-index: 4;
	overflow: auto;
}

.modal-window {
	margin: auto;
	margin-top: 40px;
	max-width: 370px;
	background-color: #fff;
	z-index: 3;
	box-sizing: border-box;
	box-shadow: 0 2px 10px rgba(0,0,0,0.5);
	border-radius: 3px;
}

.modal-close {
	float: right;
	margin-top: -30px;
	width: 20px;
	height: 20px;
	background-image: url('../images/close-button.png');
	background-size: 20px 20px;
	box-shadow: 0 2px 10px rgba(0,0,0,0.5);
	border-radius: 50%;
	cursor: pointer;
}

.modal-image {
	height: 200px;
	background-image: url('../images/nna.jpg');
	background-size: cover;
}

.modal-header {
	font-size: 16px;
	font-weight: 600;
	padding-top: 1em;
	padding-bottom: 1em;
	background-color: #fde7e7;
}

.modal-main-header {
	font-size: 20px;
	font-weight: 700;
	text-transform: uppercase;
	padding-top: 0.5em;
	padding-bottom: 0.5em;
}

.modal-concern {
	padding-top: 0.5em;
	padding-bottom: 0.5em;
	background-color: #fde7e7;
}

.modal-recommend {
	padding-top: 0.5em;
	padding-bottom: 0.5em;
	background-color: #defcd0;
}

.modal-header-title {
	font-size: 16px;
	font-weight: 600;
	text-transform: uppercase;
}

.modal-header-subtitle {
	font-size: 10px;
}

.modal-message {
	font-size: 14px;
	padding-top: 3em;
	padding-bottom: 3em;
}

.modal-description {
	font-size: 10px;
	text-align: left;
	padding-top: 0.5em;
	padding-bottom: 0.5em;
	padding-left: 25px;
	padding-right: 25px;
}

.modal-buttons {
	width: 100%;
	position: relative;
}

.modal-buttons .approve-btn {
	width: 100%;
	cursor: pointer;
	color: #fff;
	background-color: #45ac00;
	padding: 16px 0;	
}
.modal-buttons .approve-btn.disabled {
	opacity: 0.5;
	cursor: not-allowed;
}

.modal-buttons .approve-btn:hover {
	background-color: #359c00;
}

.modal-buttons .more-info-btn {
	width: 100%;
	cursor: pointer;
	color: #fff;
	background-color: #f4c300;
	padding: 16px 0;
}

.modal-buttons .more-info-btn:hover {
	background-color: #f1b900;
}

.modal-buttons .not-today-btn {
	width: 100%;
	cursor: pointer;
	color: #fff;
	background-color: #de0000;
	padding: 16px 0;
}

.modal-buttons .not-today-btn:hover {
	background-color: #be0000;
}

.more-info-popup{
	display: none;
	position: absolute;
	bottom: 103px;
	left: 24px;
	background: white;
	width: 320px;
	font-size: 16px;
	padding: 8px 8px .1px 8px;
	box-shadow: 0 2px 8px rgba(0,0,0,0.3);	
}

.more-info-popup::after{
    content: "";
	position: absolute;
	bottom: -7px;
	background: 
	linear-gradient(-135deg, rgba(255,255,255,0) 50%, 
	rgba(255,255,255,1) 50%);
	right: 45%;
	width: 25px;
	height: 25px;
    transform: rotate(-45deg); 
	box-shadow: -4px 4px 8px -4px rgba(0, 0, 0, 0.3);
	z-index: 0;	
}

.more-info-popup .info-popup-btn{
	border: 1px solid #0064a1;
	color: #00578e;		
	margin-bottom: 8px;
	padding: 12px;
	z-index: 11;
}
.info-popup-btn:hover{
	cursor: pointer;
	border: 1px solid #0084d6;
	color:#007ac5;
}
.more-info-popup svg{
	margin-right: 3px;
}


.summary-header {
	font-size: 16px;
	font-weight: 600;
	text-transform: uppercase;
	padding-top: 1em;
	padding-bottom: 1em;
}

.inspection > .summary-icons {
	display: table;
	width: 75%;
	margin: auto;
	padding-bottom: 1em;
	margin-bottom:-30px;
}

.inspection > .summary-icons > .icon {
	display: table-cell;
	width: 33.3333%;
	font-size: 20px;
	font-weight: 600;
	text-align: center;
	text-transform: uppercase;
	line-height: 32px;
}

.inspection .summary-icons img {
	width: 32px;
	vertical-align: middle;
}
.accordion.red {
	background-color: rgba(222, 0, 0, 0.3);
}
.accordion.yellow {
	background-color: rgba(244, 195, 0, 0.3);
}
.accordion.green {
	background-color: rgba(69, 172, 0, 0.3);
}
.accordion.red > .accordion-header {
	background-color: rgba(222, 0, 0, 1);
}
.accordion.yellow > .accordion-header {
	background-color: rgba(244, 195, 0, 1);
}
.accordion.green > .accordion-header {
	background-color: rgba(69, 172, 0, 1);
}

.accordion-header {
	margin-top:30px;
	font-size: 14px;
	color: #fff;
	padding: 5px 12px;
	line-height: 24px;
	text-align: left;
	text-transform: uppercase;
	cursor: pointer;
}

.accordion-fail .accordion-header {
	background-color: #de0000;
}

.accordion-fail .accordion-contents {
	background-color: #fde7e7;
}

.accordion-warning .accordion-header {
	margin-top: 30px;
	background-color: #f4c300;
}

.accordion-warning .accordion-contents {
	background-color: #fff7d8;
}

.accordion-pass .accordion-header {
	margin-top: 30px;
	background-color: #45ac00;
}

.accordion-pass .accordion-contents {
	background-color: #defcd0;
}

.accordion-pass {
	margin-bottom: 40px;
}

.accordion .accordion-header > img {
	float: left;
	width: 33px;
	padding-right: 10px;
}

.accordion-closed .accordion-contents {
	display: none;
}

.summary-table {
	display: table;
	width: 100%;
}

.summary-table-row {
	display: table-row;
}
/* ... */

